# psae-backtest

./: README.md  install_psae.ps1  psae_gui.py  pyproject.toml
.github/workflows/: build-exe.yml  ci.yml
psae_backtest/: run.py
psae_backtest/engine/: clock.py  runner.py
psae_backtest/portfolio/: constructor.py
psae_backtest/strategy/: base.py  psae_v1.py
tests/: test_constructor.py
